wp/wp-content/themes/phila.gov-theme/css/scss/_expandable.scss
.expandable {
  height: 200px;
  overflow: hidden;
  position: relative;
  &:after {
    content: '';
    display: block;
    position: absolute;
    bottom: 0;
    height: 50px;
    width: 100%;
    background-image: -webkit-linear-gradient(top, rgba(255,255,255, 0) 0%, white);
    background-image: linear-gradient(rgba(255, 255, 255, 0), white);
  }
}

.panel.info .expandable{
  &:after{
    background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #e0efff);
    background-image: linear-gradient(rgba(255, 255, 255, 0), #e0efff);
  }
}

.cost .panel.info{
  padding:0;
}
.icon-expand-container{
  position: relative;
  
  .icon-expand-link{
    height: 25px;
    position: absolute;
    right: 0;
    bottom: -25px;
  }
  .icon-expand-content{
    display: none;
    background: color(ghost-gray);
    padding: 2rem;
  }
}

.visible{
  display: block !important;
  height: auto;
}

